
Version 0.266.100 BETA:
	Minor tramp bug fixes
	added command:
		vtxpower
			sets VTX power
			tramp value is measured in milliwats
				0 through 600 mw is selectable
			smart audio devices are meassured in steps
				0 = 25mw
				1 = 200mw
				2 = 500mw
				3 = 800mw (Not supported on race version)
	tramp vtx can be placed into pit mode with the command (vtxpit)
	tramp will still restart in the broadcasting state
	
Version 0.267.100 BETA:
	Change tramp power settings to steps to make tramp play nice with spektrum, taranis lua and TBS device
		vtxpower 0 = 25mw
		vtxpower 1 = 100mw
		vtxpower 2 = 200mw
		vtxpower 3 = 400mw
	Taranis and console will display actual VTX power setting for both Tramp and TBS,
		but the following values will map like so on Spektrum Telemetry when using the Tramp:
		25mw  = 25mw
		200mw = 100mw
		500mw = 200mw
		800mw = 400mw

Version 0.268.100 BETA:
	Fixed issue with VTX not updating when it should
	Changed VTX communication startup

Version 0.269.100 BETA:
	Fix Throttle curve
	minor changes to vtx code
	Updated esc firmware to 16.71
	Only limitation is you can't use tramp on TX3 with s.port due to DMA constraints.
	Revolt 1 can use TX1, TX3 and TX5 (or other TX pins if you use the breakouts below)
	Revolt 2 can use TX1, TX3, TX4, TX6 (or other TX pins if you use the breakouts below) for tramp 1wire

Version 0.270.100 BETA:
	Added variables for configurator usage

Version 0.271.101 BETA:
	Added variables for configurator usage
	Minor default changes
	Changed how filter types above 0 opperate slightly
	Fixed bf rates

Version 0.272.102 BETA:
	Adjust default TPA
	Cleanup

Version 0.273.103 BETA:
	Cleanup

Version 0.274.104 BETA:
	Cleanup

Version 0.275.104 BETA:
	Cleanup
	Fix timer output
	Added 16.71 blheli_s binaries to RF1 binary

#Features in current development:
#	MAVlink compatibility

#Features for future development:
#	transponder output
#	Sonar input
#	GPS input
#	Unobtanium detector