@@ -1218,6 +1218,8 @@ Version 0.275.104 BETA:
 	Cleanup
 	Fix timer output
 	Added 16.71 blheli_s binaries to RF1 binary
+	New battery voltage algorithm
+
 
 #Features in current development:
 #	MAVlink compatibility
